Fix image width on mobile

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -70,6 +70,7 @@
   margin-top: 5rem;
 
   img {
+    width: 100%;
     margin-top: 4rem;
     margin-bottom: 4rem;
     padding-left: 2vw;
